# clientmanager-crm

./: README.md  pyproject.toml
backend/: main.py
backend/core/: crud.py  models.py  schemas.py
backend/db/: database.py
